Replacing 'Freerunner' with 'FreeRunner'

--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -70,7 +70,7 @@ Status : 1/10
 Status 6/10
 
 '''NO''' Openmoko FreeRunner 900/1800 available anymore (on July 3, 2008 at 21h) as needed in Europe. Furthermore,
-confirmation: From Pulster.eu: ''Our sales price is 299 EUR + shipping 15 EUR in Europe = 314 EUR. The idea of "open" is ours. So check our price calculation: if you order the Freerunner from Taiwan, it's 399 USD + 100 USD shipping + c. 90 USD "import taxes" inside Europe. Total 589 USD = c.380 EUR. So it will be cheaper and we Europeans have 2 years of warranty when buying from Pulster, instead of a 14 days(?) for imported goods.''
+confirmation: From Pulster.eu: ''Our sales price is 299 EUR + shipping 15 EUR in Europe = 314 EUR. The idea of "open" is ours. So check our price calculation: if you order the FreeRunner from Taiwan, it's 399 USD + 100 USD shipping + c. 90 USD "import taxes" inside Europe. Total 589 USD = c.380 EUR. So it will be cheaper and we Europeans have 2 years of warranty when buying from Pulster, instead of a 14 days(?) for imported goods.''
 
  Cancelled for the above reason (and not 10 people reached) * npettiaux [http://wiki.openmoko.org/wiki/Special:Emailuser/Npettiaux Contact me here]
 
@@ -101,7 +101,7 @@ ps: Dolfje think it will be cheaper to buy it from pulster.de. Can anyone confir
 
 Confirmation: From Pulster.eu:
 
-Our sales price is 299 EUR. The idea of "open" is ours. So check our price calculation: if you order the Freerunner from Taiwan, it's 399 USD + 100 USD shipping + c. 90 USD "import taxes" inside Europe. Total 589 USD = c.380 EUR.
+Our sales price is 299 EUR. The idea of "open" is ours. So check our price calculation: if you order the FreeRunner from Taiwan, it's 399 USD + 100 USD shipping + c. 90 USD "import taxes" inside Europe. Total 589 USD = c.380 EUR.
 
 So it will be cheaper and we Europeans have 2 years of warranty when buying from Pulster, instead of a 14 days(?) for imported goods.
 You can read all advantages on pulster.eu
@@ -270,9 +270,9 @@ Status : 6/10
 Status:10/10
 *Luther  <br/> mailto:lutherluo@qq.com <br/>  2 freerunner and 1 debug board.
 *Gnosy <br/> mailto:gnosyhh@gmail.com <br/>   1 freerunner and 1 debug board.
-*Bin Zong <br /> mailto:hunter_00zb@hotmail.com <br/> 1 Freerunner <br/> MSN:hunter_00zb@hotmail.com
-*Lee zaixin<br /> mailto:shqlzx@126.com <br/> 1 Freerunner <br/>
-*Zhuwei<br /> mailto:grissom_zhu@139.com <br/> MSN:wyh0310@hotmail.com <br/> 1 Freerunner <br/>
+*Bin Zong <br /> mailto:hunter_00zb@hotmail.com <br/> 1 FreeRunner <br/> MSN:hunter_00zb@hotmail.com
+*Lee zaixin<br /> mailto:shqlzx@126.com <br/> 1 FreeRunner <br/>
+*Zhuwei<br /> mailto:grissom_zhu@139.com <br/> MSN:wyh0310@hotmail.com <br/> 1 FreeRunner <br/>
 *zhaojun<br/> mailto:zhaojun1631@163.com <br/>  1 freerunner and 1 debug board
 *Benoit Begue<br/> Retired: please count me out, I'm leaving Beijing sooner than expected. Sorry for this.<br/>  1 freerunner
 *Tristan<br/> mailto:0x5478(at)gmail.com <br/>  MSN:liu_bei_bei(at)hotmail.com <br/>  1 freerunner and 1 debug board.
@@ -353,7 +353,7 @@ Should anyone need it, transportation from Aalborg to Thisted for phones can be 
 
 As it looks right now, it seems that it would be cheaper and easier for us to buy through Pulster in Germany - see the following email: http://lists.openmoko.org/pipermail/community/2008-May/017778.html ~leinir
 
-- It indeed is: [http://www.pulster.de/index.htm?d__om___b_Openmoko_Freerunner__b_991.htm], the price is 299.00 EUR per piece i we buy 10, and shipping is 14.90 EUR.~Cybe
+- It indeed is: [http://www.pulster.de/index.htm?d__om___b_Openmoko_FreeRunner__b_991.htm], the price is 299.00 EUR per piece i we buy 10, and shipping is 14.90 EUR.~Cybe
 
 * Dan Leinir Turthra Jensen <br /> mailto:admin@leinir.dk <br /> [[User:Leinir]]
 * Fabian Olesen <br /> mailto:firewalkerx@gmail.com
@@ -595,7 +595,7 @@ Status: 1/10
 === Baden-Württemberg ===
 ==== Karlsruhe ====
 Out:
-* [[Special:Emailuser/Spacemarine|Spacemarine]] I'm out. Since the Freerunner is available for 300 Euro in Germany, I don't see any point in organizing a groupbuy anymore. I've sent an email to everyone else interested in the groupbuy. If you are in this list or if I met you on the Kalug Meeting, you should have gotten it.
+* [[Special:Emailuser/Spacemarine|Spacemarine]] I'm out. Since the FreeRunner is available for 300 Euro in Germany, I don't see any point in organizing a groupbuy anymore. I've sent an email to everyone else interested in the groupbuy. If you are in this list or if I met you on the Kalug Meeting, you should have gotten it.
 * [[Special:Emailuser/Dr.Nop|Dr.Nop]] (Habe mein Telefon jetzt ebenfalls bei Pulster bestellt.)
 * [[Special:Emailuser/Gollum|Gollum]] Pulster doesn't give away the extra goodies, but the price still seems fair -- I'm out, too.
 * [[Special:Emailuser/Archimedes|Sebastian]] I'm going to buy at pulsters (299€) => I'm out
@@ -612,14 +612,14 @@ Still In:
 
 ==== Leonberg ====
 Status 1/10
-* [[Special:Emailuser/Agon|Agon]] Maybe 1 Freerunner.
+* [[Special:Emailuser/Agon|Agon]] Maybe 1 FreeRunner.
 ----
-* [[Special:Emailuser/ZaPPaS|ZaPPaS]] Since the Freerunner is available for a comparable price at [http://www.pulster.de/] I will buy there...
+* [[Special:Emailuser/ZaPPaS|ZaPPaS]] Since the FreeRunner is available for a comparable price at [http://www.pulster.de/] I will buy there...
 
 ==== Tübingen ====
 Status 6/10
 * [[Special:Emailuser/NoBody|NoBody]] close to tuebingen and stuttgart (between both)
-* [[Special:Emailuser/eliasp|eliasp]] (3 Freerunner (me, qknight + sbock) - Tübingen downtown
+* [[Special:Emailuser/eliasp|eliasp]] (3 FreeRunner (me, qknight + sbock) - Tübingen downtown
 * [[Special:Emailuser/nobs|nobs]] thinking about buying one; if I am #10, count me in; if there is someone else #11 you can drop me
 * [[Special:Emailuser/marjay|marjay]] take also one (Dettingen/Erms)
 
@@ -644,10 +644,10 @@ I just want to see if there are enough people to fill up to ten. So add your nam
 Wann werden die dann bestellt/gezahlt? Dauert bei mir no kurz bis ichs Geld für zusammen hab aber dann nehm ich eins.
 MfG [http://wiki.openmoko.org/wiki/Special:Emailuser/MookiE MookiE]
 
-Hallo, ich würde mich für einen Freerunner interessieren. Wie sieht es mit Zoll aus? Kommt der noch dazu?
+Hallo, ich würde mich für einen FreeRunner interessieren. Wie sieht es mit Zoll aus? Kommt der noch dazu?
 [http://wiki.openmoko.org/wiki/Special:Emailuser/Murks Murks]
 
-   $3690 (10 Freerunner) 
+   $3690 (10 FreeRunner) 
  + $ 160 (Versand lt. Australiern)
  =======
    $3850
@@ -1102,7 +1102,7 @@ Status : 6/10
 
 == Italy == 
 For more informations and to organize groups, visit the
-*[http://groups.google.com/group/freerunner-italian-group-sales?hl=it '''''Italian Freerunner Group Sales Google Group'''''] (ML/Web/Feeds) ([mailto:freerunner-italian-group-sales@googlegroups.com freerunner-italian-group-sales@googlegroups.com]).
+*[http://groups.google.com/group/freerunner-italian-group-sales?hl=it '''''Italian FreeRunner Group Sales Google Group'''''] (ML/Web/Feeds) ([mailto:freerunner-italian-group-sales@googlegroups.com freerunner-italian-group-sales@googlegroups.com]).
 
 '''BUT please keep adding your name and email to the list below'''
 
@@ -1136,7 +1136,7 @@ Rimossi:
 ==== Milano e dintorni====
 <!--[[GroupSales_Milano_e_dintorni|Organizzazione preliminare]] DEPRECATA lì 11 Maggio 2008.-->
 
-* Per l'organizzazione preliminare interagire sul [http://groups.google.com/group/freerunner-italian-group-sales?hl=it '''Freerunner Italian Group Sales''']. Ad ogni modo, per stabilire le precedenze nella prenotazione, '''aggiungetevi nella lista qui sotto'''
+* Per l'organizzazione preliminare interagire sul [http://groups.google.com/group/freerunner-italian-group-sales?hl=it '''FreeRunner Italian Group Sales''']. Ad ogni modo, per stabilire le precedenze nella prenotazione, '''aggiungetevi nella lista qui sotto'''
 * Per il primo gruppo d'acquisto già partito: '''[[GroupSales/Milano|wiki organizzativo]]'''
 
 ===== Lista degli interessati =====
@@ -1270,7 +1270,7 @@ Status 1/10
 ==== Roma ====
 Status 9/10
 
-Per coordinamento [http://groups.google.com/group/freerunner-italian-group-sales?hl=it '''Freerunner Italian Group Sales'''] (Roma)
+Per coordinamento [http://groups.google.com/group/freerunner-italian-group-sales?hl=it '''FreeRunner Italian Group Sales'''] (Roma)
 
 La precedenza è stabilita in base all'ordine di aggiunta nella lista inizale<br>
 
@@ -1336,7 +1336,7 @@ Status : 3/10
 
 == Lithuania ==
 === Vilnius ===
-Status 10/10 - Buying via http://www.handheld-linux.com/wiki.php?page=Neo%20Freerunner, more slots available as they make discounts for buying 10+ Freerunners.
+Status 10/10 - Buying via http://www.handheld-linux.com/wiki.php?page=Neo%20FreeRunner, more slots available as they make discounts for buying 10+ FreeRunners.
 Order will be placed on July 22.
 * [[Special:Emailuser/Crebain|Laurynas Ruškys]] 9 phones + 2 boards
 * 1 x Neo FreeRunner, [[Special:Emailuser/Sirex|Mantas Zimnickas]].
@@ -1471,7 +1471,7 @@ import duty on mobile phones is 0%[http://www.customs.govt.nz/importers/Private+
 
 You'll also need to add on disbursement fees etc. If it's UPS it's not too bad (~NZ$40) if it comes through NZ Post then it can be ~NZ$120.
 
-So, the total cost of a Freerunner as part of a 10 pack, will be:<br>
+So, the total cost of a FreeRunner as part of a 10 pack, will be:<br>
 492 + 34.39 + 65.80 = NZ$592.19 + NZ$4 = '''~NZ$596'''
 
 + any possible charges to get it posted elsewhere in New Zealand.
@@ -2723,7 +2723,7 @@ Openmokos for this list have allready been purchased. Hoorray!
 look for members? look at the España-Portugal [[IberiaGroupSale]]
 
 == Sweden ==
-We have a google group for discussion about a possible Swedish group order: freerunner-sverige@googlegroups.com, see [http://groups.google.com/group/freerunner-sverige Svensk Gruppbeställning av Freerunner]. Please join the discussion!
+We have a google group for discussion about a possible Swedish group order: freerunner-sverige@googlegroups.com, see [http://groups.google.com/group/freerunner-sverige Svensk Gruppbeställning av FreeRunner]. Please join the discussion!
 
 If insufficient number of people, orders could be merged and remailed perhaps.
 
@@ -2896,7 +2896,7 @@ I  will organice the next 10pack as soon as this list is full. You may Pick up t
 * Alex Aeschlimann (Bern)<br />  [http://wiki.openmoko.org/wiki/Special:Emailuser/alexae Contact]
 * Michael Psarros (Zürich)<br/> 1x Freeruner, 1x Headset, Selbstabholer, [http://wiki.openmoko.org/wiki/Special:Emailuser/mpsarros Contact]
 * Martin Zulliger (two phones!) (Zürich), <br/> [http://wiki.openmoko.org/wiki/Special:Emailuser/Zyll Contact]
-* Adrian Friedli (Fällanden) <br /> 1x Freerunner + 1x Headset (black) + 1x Pouche, will pick up at the ETH. [http://wiki.openmoko.org/wiki/Special:Emailuser/Adi86 Contact]
+* Adrian Friedli (Fällanden) <br /> 1x FreeRunner + 1x Headset (black) + 1x Pouche, will pick up at the ETH. [http://wiki.openmoko.org/wiki/Special:Emailuser/Adi86 Contact]
 
 Status : 11/30 <br />
 '''Contact person who order the 10Pack : ??'''
@@ -2947,7 +2947,7 @@ Status : 10/10 FULL! (#: have payed)<br />
 * # Marcel Wirth (Zürich) [http://wiki.openmoko.org/wiki/Special:Emailuser/Skarhand Contact]
 
 ===== Hardware fix material for GPS problem =====
-There is a problem with the GPS in the currently shipping Freerunners: [http://kerneltrap.org/mailarchive/openmoko-community/2008/7/18/2562474 Mail archive]. I already orderd 200 "10pf NPO 50V 0402" capacitors for convenient reselling. They will arrive within 10 days from now (2008.07.21).
+There is a problem with the GPS in the currently shipping FreeRunners: [http://kerneltrap.org/mailarchive/openmoko-community/2008/7/18/2562474 Mail archive]. I already orderd 200 "10pf NPO 50V 0402" capacitors for convenient reselling. They will arrive within 10 days from now (2008.07.21).
 
 The conditions to get those capacitors from me:
 * You'll receive 5 capacitors (In case you trash the first 4, soldering could be tricky)
@@ -3189,9 +3189,9 @@ Status: 1/10
 
 == Ukraine ==
 ==== Donetsk ====
-*[mailto:robotex.ag@mail.ru robotex] Robotex - 1xNeo Freerunner
+*[mailto:robotex.ag@mail.ru robotex] Robotex - 1xNeo FreeRunner
 ==== Kiev ====
-*[mailto:lvccgd@gmail.com lvccgd] Vladimir - 1xNeo Freerunner
+*[mailto:lvccgd@gmail.com lvccgd] Vladimir - 1xNeo FreeRunner
 
 == USA ==
 === Arizona ===
@@ -3227,7 +3227,7 @@ Status: 1/10
 ==== Los Angeles ====
 Status: 0/10
 
-* Ian Douglas, Santa Monica <br /> I'll help organize a group sale, meet & greet, but since I was selected to help test the Freerunner, I won't need to actually purchase one. [http://wiki.openmoko.org/wiki/Special:Emailuser/Iandouglas Contact me here]
+* Ian Douglas, Santa Monica <br /> I'll help organize a group sale, meet & greet, but since I was selected to help test the FreeRunner, I won't need to actually purchase one. [http://wiki.openmoko.org/wiki/Special:Emailuser/Iandouglas Contact me here]
 * Matthew Wetmore, Westchester 90045 <br /> [http://wiki.openmoko.org/wiki/Special:Emailuser/Wetmoko Contact] - part of order 1843
 * Daniel, Torrance <br /> [http://wiki.openmoko.org/wiki/Special:Emailuser/Beaker82 Contact] - part of order 1843
 * James Robertson, Irvine <br /> [http://wiki.openmoko.org/wiki/Special:Emailuser/JamesRobertson Contact] - part of order 1843
@@ -3410,15 +3410,15 @@ PLEASE contact Bert or Michael in addition to adding yourself to the list
 Status: 10/10 (Our phones are here.   Contact Ken Young to pick up your 'runner.   We will try to arrange some kind of iTunes activation fiasco to brick them all.)
 * Benjamin Moody [[Special:Emailuser/FloppusMaximus|Contact]]
 
-* Ken Young, Cambridge (Note, if we're not up to 10/10 on the day the Freerunner is announced, I'm going to drop out and order individually).[[Special:Emailuser/Dolson|Contact]]
+* Ken Young, Cambridge (Note, if we're not up to 10/10 on the day the FreeRunner is announced, I'm going to drop out and order individually).[[Special:Emailuser/Dolson|Contact]]
 
 * Chris White (for 2) [[Special:Emailuser/Safire|Contact]]
 
-* Nick Dube - Pembroke, NH (Will also drop out if we do not have 10 by Freerunner release.) [http://wiki.openmoko.org/wiki/Special:Emailuser/Doobe01 Contact]
+* Nick Dube - Pembroke, NH (Will also drop out if we do not have 10 by FreeRunner release.) [http://wiki.openmoko.org/wiki/Special:Emailuser/Doobe01 Contact]
 
 * Justin Brzozoski - Worcester, MA area [[Special:Emailuser/Jabski|Contact]]
 
-* John Nicholson - Amherst, MA (Will also drop out if we do not have 10 by Freerunner release.) [[Special:Emailuser/nicklogan|Contact]]
+* John Nicholson - Amherst, MA (Will also drop out if we do not have 10 by FreeRunner release.) [[Special:Emailuser/nicklogan|Contact]]
 
 * Matthew Campbell - Worcester, MA [[Special:Emailuser/lifeisafractal|Contact]]
 
@@ -3431,9 +3431,9 @@ Status: 4/10
 * 0x Bala Nair - Acton, MA (dropping out - ordered one individually) [[Special:Emailuser/bnair|Contact]]
 * 0x Mike Doody - Groton, MA (ordered one already)[[Special:Emailuser/dude|Contact]]
 * 0x Nathan Perry - Derry, NH (cannot switch to GSM at this time)
-* Kyle Harrington - Amherst, MA (Will drop out if we do not have 10 by Freerunner release.) [[Special:Emailuser/dancingcuziwanna|Contact]]
+* Kyle Harrington - Amherst, MA (Will drop out if we do not have 10 by FreeRunner release.) [[Special:Emailuser/dancingcuziwanna|Contact]]
 * Ryan Svoboda - Worcester, MA (Will buy one individually on release day if this group is incomplete) [[Special:Emailuser/ryansv|Contact]]
-* Ryan Meador - Worcester, MA (Will drop out if we do not have 10 by Freerunner release.) [[Special:Emailuser/Yanroy|Contact]]
+* Ryan Meador - Worcester, MA (Will drop out if we do not have 10 by FreeRunner release.) [[Special:Emailuser/Yanroy|Contact]]
 * Jeff Gelbard - Haydenville, MA [[Special:Emailuser/jgelbard|Contact]]
 (Between the 2 groups, we already have 7 "visibly" from Worchester - Western MA...I think the group should be resorted....Who is the contact where the package will be sent?)
 
@@ -3468,7 +3468,7 @@ Status : 2/10
 
 Status: 16/20 at 2008-05-24
 
-http://www.hants.lug.org.uk/cgi-bin/wiki.pl?FreerunnerBulkBuy
+http://www.hants.lug.org.uk/cgi-bin/wiki.pl?FreeRunnerBulkBuy
 
 Willing to re-ship within the UK.
 
