Replacing 'Freerunner' with 'FreeRunner'

--- a/Howto_Test_Your_GPS_with_agpsui.mw
+++ b/Howto_Test_Your_GPS_with_agpsui.mw
@@ -1,10 +1,10 @@
-= How to test AGPS on the Neo Freerunner =
+= How to test AGPS on the Neo FreeRunner =
 ==Overview==
-Some Freerunner GPSs appear to be insensitive, taking a long time, or not obtaining a fix at all, even in ideal condtions.
+Some FreeRunner GPSs appear to be insensitive, taking a long time, or not obtaining a fix at all, even in ideal condtions.
 
 There is an issue where the memory clock for the SD Card interferes with the internal GPS antenna [http://www.openmoko.org/wiki/GPS_Problems GPS Problem].  A software fix is well underway and first iterations of the it appear in releases of OM2007.2 on or after 7-22-2008.  Either flash a version with the fixes or else please remove the SD Card while performing the test.  Obtaining a fix took well under 1 minute with the card removed and also with the software fix.
 
-There was a report of a [http://wiki.openmoko.org/wiki/FreeRunner_GPS_antenna_repair_SOP bad solder joint] between the GPS antenna connector and the Freerunner main PCB but it is very unlikely that your Freerunner has this situation.
+There was a report of a [http://wiki.openmoko.org/wiki/FreeRunner_GPS_antenna_repair_SOP bad solder joint] between the GPS antenna connector and the FreeRunner main PCB but it is very unlikely that your FreeRunner has this situation.
 
 ===Why do I need to test?===
 This guide outlines how to gather data to help fix this problem.
@@ -12,7 +12,7 @@ It's important for both those with working GPS, and those with not-working GPS t
 
 There may be some with marginal GPSs that appear to work, but are drastically less sensitive than the norm.
  
-This guide assumes that you've managed to configure your Freerunner so that you can install opkg packages from buildhost.openmoko.org/daily-feed/ , either directly through wifi or usb networking, or by downloading them to a desktop and transferring them with scp.
+This guide assumes that you've managed to configure your FreeRunner so that you can install opkg packages from buildhost.openmoko.org/daily-feed/ , either directly through wifi or usb networking, or by downloading them to a desktop and transferring them with scp.
 
 ===Aims===
 We need to find the average reported signal strength of phones in a similar condition.
@@ -81,7 +81,7 @@ it's UI you can find the tabs:
 :"Log" gives you the NEMA output from the GPS chipset. Interesting for
 ::	those who can read NEMAish, not so interesting for the rest of
 ::	us.
-*8. Now press "Power on" and then "SS", then leave the Freerunner in a vertical position for  _at least 30 minutes without moving or
+*8. Now press "Power on" and then "SS", then leave the FreeRunner in a vertical position for  _at least 30 minutes without moving or
 touching it_. (a large mug works well as a stand) Do not stand over it either, your blocking those precious
 satelite signals! ( GPS runs at ~ 1,2-1,5 Ghz, this is a weak signal
 with a wavelength of 20cm, now imagine
