Replacing 'Freerunner' with 'FreeRunner'

--- a/Hspa-stick.mw
+++ b/Hspa-stick.mw
@@ -1,9 +1,9 @@
 Just for clarification freerunner do not support HSPA.
 
-Here i will describe a way to get a HSPA USB stick working with the Freerunner.
+Here i will describe a way to get a HSPA USB stick working with the FreeRunner.
 ( Tested with the Novatel MC950D )
 
-Problem at installation was that the HSPA-Stick register a virtual cdrom drive if attached to usb host. Freerunner do not have installed UDF-filesystem modules so you have to comile that on you own. (Yes i know the virtual cdrom drive is useless because there are only windoof and osx drivers but you have to eject the cdrom to get a serial<->usb converter working.
+Problem at installation was that the HSPA-Stick register a virtual cdrom drive if attached to usb host. FreeRunner do not have installed UDF-filesystem modules so you have to comile that on you own. (Yes i know the virtual cdrom drive is useless because there are only windoof and osx drivers but you have to eject the cdrom to get a serial<->usb converter working.
 
 1. Install crosscompile environment
 http://wiki.openmoko.org/wiki/Toolchain
