--- a/IPhone.mw
+++ b/IPhone.mw
@@ -1,8 +1,8 @@
-== Comparison between Apple iPhone (and iPhone 3G) and the [[FIC]] Freerunner ([[GTA02#.22Phase_2.22_.28GTA02.2C_.22Mass_Market.22.29|GTA02]]) running Openmoko Linux ==
-{{Note|The Openmoko phone this page is about is the [[Freerunner]] which has internal codename [[Neo1973#.22Phase_2.22_.28GTA02.2C_.22Mass_Market.22.29|GTA02]]. For the earlier Neo1973 model see this page [[IPhone_(GTA01)]]}}
+== Comparison between Apple iPhone (and iPhone 3G) and the [[FIC]] FreeRunner ([[GTA02#.22Phase_2.22_.28GTA02.2C_.22Mass_Market.22.29|GTA02]]) running Openmoko Linux ==
+{{Note|The Openmoko phone this page is about is the [[FreeRunner]] which has internal codename [[Neo1973#.22Phase_2.22_.28GTA02.2C_.22Mass_Market.22.29|GTA02]]. For the earlier Neo1973 model see this page [[IPhone_(GTA01)]]}}
 
 * Apple announced their [http://www.apple.com/iphone/specs.html iPhone] at MacWorld 2007. 
-* FIC announced the FIC Freerunner in Jan 2008
+* FIC announced the FIC FreeRunner in Jan 2008
 
 iPhone UI Demo on youtube http://youtube.com/watch?v=YgW7or1TuFk
 
@@ -10,7 +10,7 @@ iPhone UI Demo on youtube http://youtube.com/watch?v=YgW7or1TuFk
  {| border="1"
  !Feature
  !iPhone
- !Freerunner([[Neo1973#.22Phase_2.22_.28GTA02.2C_.22Mass_Market.22.29|GTA02]]). 
+ !FreeRunner([[Neo1973#.22Phase_2.22_.28GTA02.2C_.22Mass_Market.22.29|GTA02]]). 
  |-
  |Announced
  |2007-01-09, 3G: 2008-07-09
