Replacing 'Freerunner' with 'FreeRunner'

--- a/IPhone_(GTA01).mw
+++ b/IPhone_(GTA01).mw
@@ -1,6 +1,6 @@
 == Comparison between Apple iPhone and the FIC Neo1973 ([http://wiki.openmoko.org/wiki/Neo1973#Phase_1_.28GTA01Bv4.29 (GTA01Bv4]) running Openmoko Linux ==
 
-{{Note|This page is about is the [[Neo1973#Phase_1_.28GTA01Bv4.29|GTA01Bv4-revision]] that was released to developers only in July 2007. For the later FIC Freerunner model see [[IPhone|GTA02]]}}
+{{Note|This page is about is the [[Neo1973#Phase_1_.28GTA01Bv4.29|GTA01Bv4-revision]] that was released to developers only in July 2007. For the later FIC FreeRunner model see [[IPhone|GTA02]]}}
 
 * Apple announced their [http://www.apple.com/iphone/technology/specs.html iPhone] at MacWorld 2007.
 * FIC announced the FIC Neo1973 announced in the fall of 2006 and released it to developers in July 2007.
