--- a/Introduction.mw
+++ b/Introduction.mw
@@ -25,7 +25,7 @@ This initative has been initiated by [[FIC|FIC Inc.]] and [http://www.openmoko.c
 
 == Photos ==
 
-=== Neo Freerunner (gta02) ===
+=== Neo FreeRunner (gta02) ===
 [[Image:GTA02.gif]]
 
 === Neo 1973 (gta01) ===
