Replacing 'Freerunner' with 'FreeRunner'

--- a/Introduction%2Fes.mw
+++ b/Introduction%2Fes.mw
@@ -22,7 +22,7 @@ Este proyecto ha sido iniciado por [[FIC|FIC Ltda.]]y [http://www.openmoko.com O
 * [http://www.youtube.com/watch?v=hn7wuxlTNvs TangoGPS] at YouTube
 
 == Fotos ==
-=== Neo Freerunner (gta02) ===
+=== Neo FreeRunner (gta02) ===
 [[Image:GTA02.gif]]
 
 === Neo 1973 (gta01) ===
