Replacing 'Freerunner' with 'FreeRunner'

--- a/InvisibleShield.mw
+++ b/InvisibleShield.mw
@@ -10,19 +10,19 @@ See also [[Zagg Protection Discount Number]]
 ==Front==
 [[Image:invis_shield_front.jpg]]
 
-==Freerunner front pre shield==
+==FreeRunner front pre shield==
 [[Image:fr_front_pre_shield.jpg]]
 
-==Freerunner back pre shield==
+==FreeRunner back pre shield==
 [[Image:fr_back_pre_shield.jpg]]
 
-==Freerunner front post shield==
+==FreeRunner front post shield==
 [[Image:fr_front_post_shield.jpg]]
 
-==Freerunner back post shield==
+==FreeRunner back post shield==
 [[Image:fr_back_post_shield.jpg]]
 
-==Freerunner side post shield==
+==FreeRunner side post shield==
 [[Image:fr_side_post_shield.jpg]]
 
 [[Category:Hardware]]
