--- a/Lint-wifi.mw
+++ b/Lint-wifi.mw
@@ -1,7 +1,7 @@
 =Introduction=
 
 ==Description==
-lint-wifi is a relatively simplistic application written in PyGTK for the Neo Freerunner.  It aims to create a GUI-based method for associating with wireless networks, and provide various bits of connection-related information and control.  It is designed to work without a stylus, except when entering passwords (which are normally stored).
+lint-wifi is a relatively simplistic application written in PyGTK for the Neo FreeRunner.  It aims to create a GUI-based method for associating with wireless networks, and provide various bits of connection-related information and control.  It is designed to work without a stylus, except when entering passwords (which are normally stored).
 It is at the moment intended to do ''nothing'' unless a button is pushed.
 
 It will be released ''soon''.
