Replacing 'Freerunner' with 'FreeRunner'

--- a/Main_Page%2Fcs.mw
+++ b/Main_Page%2Fcs.mw
@@ -11,7 +11,7 @@ Programové vybavení Openmoko můžete nainstalovat na celou škálu [[Supporte
 
 <s>'''Telefon není v současné době vhodný pro běžné uživatele.''' Aktuální stav programového vybavení je ve fázi před alpha verzí. Jestliže si objednáte Neo1973, neočekávejte, že ho budete moci využívat jako běžný telefon pro každodenní činnost, ne dřív než v říjnu 2007 (spíše pozděj), kdy se očekává jeho finální verze určená pro koncové zákazníky.
 
-Od 9.5.2008 by měla začít sériová výroba druhé verze telefonu Neo Freerunner poté bude následovat několik menších testů a na konec bude telefon uvolněn do prodeje za 399USD. Současně byly také zavedeny slevy pro objednávky po deseti kusech telefonů za 369USD. Pokud by jste měli zájem připište se na [[GroupSales#Brno|seznam]]. --[[User:Fox|Fox]] 19:12, 6 May 2008 (UTC)</s>
+Od 9.5.2008 by měla začít sériová výroba druhé verze telefonu Neo FreeRunner poté bude následovat několik menších testů a na konec bude telefon uvolněn do prodeje za 399USD. Současně byly také zavedeny slevy pro objednávky po deseti kusech telefonů za 369USD. Pokud by jste měli zájem připište se na [[GroupSales#Brno|seznam]]. --[[User:Fox|Fox]] 19:12, 6 May 2008 (UTC)</s>
 
 Telefon [[Neo_FreeRunner/cs|Neo FreeRunner]] je nyní volně v prodeji. Hromadná objednávka byla uzvařena. Ale je možné telefon objednat i individuálně.
 
