Replacing 'Freerunner' with 'FreeRunner'

--- a/Main_Page%2Fes.mw
+++ b/Main_Page%2Fes.mw
@@ -1,5 +1,5 @@
 __NOTOC__
-__NOEDITSECTION__ [[Image:Freerunner02.gif|thumb|150px|right|Neo Freerunners]]
+__NOEDITSECTION__ [[Image:FreeRunner02.gif|thumb|150px|right|Neo FreeRunners]]
 
 <div style="padding: 2.5ex; text-align: center; font: bold x-large sans">Openmoko™ - Abierto. Móvil. Libre.</div>
 Openmoko es un proyecto de [http://es.wikipedia.org/wiki/Open_source Código Abierto] para crear el primer sistema operativo libre para teléfonos móviles a nivel mundial. Openmoko actuamente esta vendiendo el teléfono [[Neo FreeRunner/es|Neo FreeRunner]] a usuarios avanzados con conocimientos técnicos y empezará la venta al público en general tan pronto com el software este lo suficientemente desarrollado.
