Replacing 'Freerunner' with 'FreeRunner'

--- a/Main_Page%2Ffa.mw
+++ b/Main_Page%2Ffa.mw
@@ -22,7 +22,7 @@ Openmoko™ (اپن موکو) پروژه ای است که تحت [[License| لا
 ==<font color=75d806>محصولات Openmoko </font>==
 {{Bar}}
 
-[[Image:Freerunner02.gif|thumb|150px]]
+[[Image:FreeRunner02.gif|thumb|150px]]
 اولین محصول Openmoko [[Neo1973]] نام داشت که از طریق  [http://www.openmoko.com/store.html فروشگاه آنلاین Openmoko ] فروخته می شد.  این محصول در اوایل فبریه ۲۰۰۸ به اتمام رسید.
 
 Openmoko نسل دوم Noe را در ۲۶ جون ۲۰۰۸ به نام Neo FreeRunner (بارمزکد:GTA02) به بازار فرستاد,  کسانی که علاقه به خرید Neo FreeRunner دارند نام خود را در آدرس [[Buying_Interest_List|لیست علاقه مندان به خرید]] اضافه کنند. همچنین می توانید به گروها های فروش ([[GroupSales]]) برای قیمت و چیزهای دیگر نگاهی بیاندازید .
