Replacing 'Freerunner' with 'FreeRunner'

--- a/Main_Page%2Ffi.mw
+++ b/Main_Page%2Ffi.mw
@@ -1,6 +1,6 @@
 {{Languages|Main Page}}
 __NOTOC__
-__NOEDITSECTION__ [[Image:Freerunner02.gif|thumb|150px|right|Neo Freerunners]]
+__NOEDITSECTION__ [[Image:FreeRunner02.gif|thumb|150px|right|Neo FreeRunners]]
 
 <div style="padding: 2.5ex; text-align: center; font: bold x-large sans">'''Openmoko™ - Avoin. Mobiili. Vapaa.'''</div>
 
@@ -20,7 +20,7 @@ Täyden [[Host-based development with Xoo and Xephyr|X-palvelimen]] sisältämä
  
 ==<font color=75d806>Openmoko-tuotteet</font>==
 
-[[Image:Freerunner02.gif|thumb|150px]]
+[[Image:FreeRunner02.gif|thumb|150px]]
 Ensimmäistä Openmoko-tuotetta [[Neo1973]]:ta myytiin ainostaan suoraan [http://www.openmoko.com/store.html Openmoko-verkkokaupan] kautta. Se loppuunmyytiin helmikuussa 2008.
 
 Openmoko alkoi myydä Neon toista sukupolvea Neo FreeRunneria (GTA02) 3. heinäkuuta 2008. Se on ostettavissa [http://www.openmoko.com/store.html Openmoko-verkkokaupan] kautta tai maakohtaisilta jälleenmyyjiltä. Ryhmätilauksia käyttämällä voi saada alennuksia tai ylimääräisiä varusteita. Löydä oma ryhmäsi [[GroupSales|ryhmätilaussivulta]].
