Replacing 'Freerunner' with 'FreeRunner'

--- a/Main_Page%2Fhe.mw
+++ b/Main_Page%2Fhe.mw
@@ -22,7 +22,7 @@ Openmoko השיקה את המוצר הראשון שלה, ה-Neo 1973, בתארי
  
 ==<font color=75d806>מוצרי Openmoko</font>==
 
-[[Image:Freerunner02.gif|thumb|150px]]
+[[Image:FreeRunner02.gif|thumb|150px]]
 המוצר הראשון של חברת Openmoko, ה-[[Neo 1973]], נמכר באופן בלעדי דרך [http://www.openmoko.com/store.html החנות המקוונת של Openmoko]. מלאי המכשירים אזל בתחילת פברואר 2008. 
 
 Openmoko החלה למכור את Neo FreeRunner (GTA02), הדור השני של מכשירי Neo, ב-3 ליולי, 2008.
