Replacing 'Freerunner' with 'FreeRunner'

--- a/Main_Page%2Fnl.mw
+++ b/Main_Page%2Fnl.mw
@@ -22,7 +22,7 @@ Het Openmoko platform, inclusief volledige host-based ontwikkelingstools dmv Xoo
 ==<font color=75d806>Openmoko Producten</font>==
 
 
-[[Image:Freerunner02.gif|thumb|150px]]
+[[Image:FreeRunner02.gif|thumb|150px]]
 Het eerste produkt van Openmoko, de [[Neo1973]], die alleen verkrijgbaar was via: [http://www.openmoko.com/store.html Openmoko Online Shop]. De Neo1973 is uitverkocht op 18 februari 2007
 
 Openmoko begon met het verkopen van de  FreeRunner (ook wel GTA02 genoemd), op 3 juli 2008. Dit was het tweede product van Openmoko.  De FreeRunner is verkrijgbaar via de Openmoko online shop, of via een distributeur.  Ook is hier de mogelijkheid om 10 FreeRunners tegelijk te kopen, hier zitten extra accesoires bij, en ook wordt er korting gegeven.
