Replacing 'Freerunner' with 'FreeRunner'

--- a/Main_Page%2Fru.mw
+++ b/Main_Page%2Fru.mw
@@ -22,7 +22,7 @@ Openmoko™ - рожден как проект с [http://ru.wikipedia.org/wiki/
 ==<font color=75d806>Продукция Openmoko</font>==
 {{Bar}}
 
-[[Image:Freerunner02.gif|thumb|150px]]
+[[Image:FreeRunner02.gif|thumb|150px]]
 Первый продукт Openmoko - Neo1973, продавался исключительно через Интернет Магазин Openmoko. Продажи закончились в начале февраля 2008 года.
 
 С 26 июня 2008 года, Openmoko поставляет Neo FreeRunner (GTA02) - второе поколение Neo. Если, вы заинтересованны в покупке Neo FreeRunner, добавьте свое имя в [[Buying_Interest_List|Лист Заинтересованных в Покупке]]. Также, посмотрите групповые покупки на [[GroupSales|Групповых Продажах]] с дополнительными скидками и услугами.
