Replacing 'Freerunner' with 'FreeRunner'

--- a/Manual_Debian.mw
+++ b/Manual_Debian.mw
@@ -28,7 +28,7 @@ This kernel was build by Marcel_M and has some important patches in it such as r
  wget http://rabenfrost.net/celtune/uImage-2.6.24+svnr4194-r4165-r3-neo1973.bin
  ./dfu-util -d 0x1457:0x5119 -a kernel -R -D ./uImage-2.6.24+svnr4194-r4165-r3-neo1973.bin
 
-Question: is this kernel for Neo1973/GTA01 only? Is there a good/recommended kernel for Freerunner/GTA02?
+Question: is this kernel for Neo1973/GTA01 only? Is there a good/recommended kernel for FreeRunner/GTA02?
 
 Use a new image kernel from :"http://buildhost.openmoko.org/daily/freerunner/", it works fine ;)
 
@@ -259,7 +259,7 @@ These are for sound, bluetooth and USB. Use the modules archive that fits to you
  snd-pcm-oss\n\
  snd-soc-neo1973-wm8753" > /etc/modules
 
-Note: On the Freerunner, the sound module (on the last line) is called snd-soc-neo1973-gta02-wm8753
+Note: On the FreeRunner, the sound module (on the last line) is called snd-soc-neo1973-gta02-wm8753
 [[Image:Sonata.png|480px|''Sonata on neo1973'']]
 == Enable Sound ==
 
@@ -302,7 +302,7 @@ on neo:
  chroot /media/card/sid mplayer http://relay.slayradio.org:8000/
 
 
-=For X applications / xserver on the Freerunner=
+=For X applications / xserver on the FreeRunner=
 
 Copy /usr/bin/Xglamo (and /usr/bin/Xfbdev) to  /usr/bin in Debian from FSO/ASU/2007.2/2008.8.
 
