Replacing 'Freerunner' with 'FreeRunner'

--- a/Mofi.mw
+++ b/Mofi.mw
@@ -35,7 +35,7 @@ This makes it possible to (I believe) shut down the wifi to conserve battery.  Y
 
 === Through opkg ===
 
-just scp the [http://projects.openmoko.org/frs/download.php/277/mofi_0.02_armv4t.ipk ipk] to your Freerunner, then install using opkg:
+just scp the [http://projects.openmoko.org/frs/download.php/277/mofi_0.02_armv4t.ipk ipk] to your FreeRunner, then install using opkg:
 
  scp mofi_0.02_armv4t.ipk  root@192.168.0.202:/tmp/
  
@@ -43,7 +43,7 @@ just scp the [http://projects.openmoko.org/frs/download.php/277/mofi_0.02_armv4t
   > cd /tmp/
   > opkg install mofi_0.02_armv4t.ipk
 
-To run on your Freerunner:
+To run on your FreeRunner:
 
 from the main menu choose the Applications section then "Wifi Mofi". Alternatively, mofi can be run from the console by typing ''mofi''
 
@@ -60,7 +60,7 @@ http://projects.openmoko.org/tracker/?atid=710&group_id=165&func=browse
 run ''./install.sh'' - this will set up the environment and move files to your freerunner. note you may have to change the value of FREERUNNER to point to the correct IP..
 
 
-then to run mofi open the console on your Freerunner and type ''mofi.sh''
+then to run mofi open the console on your FreeRunner and type ''mofi.sh''
 
 
 You can also download the '''nightly SVN tree snapshot''' from https://projects.openmoko.org/snapshots.php?group_id=165
