--- a/MokoMakefile.mw
+++ b/MokoMakefile.mw
@@ -113,7 +113,7 @@ Set up the environment with:
 
 If you are building for the Neo1973 GTA01, then also do this
   make setup-machine-neo
-If you are building for the Freerunner GTA02, then also do this
+If you are building for the FreeRunner GTA02, then also do this
   make setup-machine-freerunner
 
 === Building ===
@@ -283,7 +283,7 @@ Here is the list (not complete) of useful MokoMakefile commands (actually make t
 
 ; make setup-machine-neo : setup for GTA01 version of Neo1973
 
-; make setup-machine-freerunner : setup for GTA02 version of Freerunner
+; make setup-machine-freerunner : setup for GTA02 version of FreeRunner
 
 ==Developing with MokoMakefile==
 
