--- a/Nand_erase.mw
+++ b/Nand_erase.mw
@@ -8,7 +8,7 @@ to get the necessary right (even as root). Using cu, you can then access the Neo
 
 After connecting, you should get a prompt where you can tell u-boot to clean certain parts of the NAND memory.
 
-{{warning|Before you hit enter on one of the following commands, make sure that you are *not* issuing a plain "nand erase" command - always make sure you tell it which partition to erase. If you forget this you'll brick the Neo1973 and you'll need a debug board to recover it. For Freerunner, you can recover using the NOR flash.}}
+{{warning|Before you hit enter on one of the following commands, make sure that you are *not* issuing a plain "nand erase" command - always make sure you tell it which partition to erase. If you forget this you'll brick the Neo1973 and you'll need a debug board to recover it. For FreeRunner, you can recover using the NOR flash.}}
 
  nand erase rootfs
  nand erase kernel
