Replacing 'Freerunner' with 'FreeRunner'

--- a/Neo_1973_GPS.mw
+++ b/Neo_1973_GPS.mw
@@ -3,7 +3,7 @@ See [[GTA02_GPS|Here]] For information about the GPS in the Neo FreeRunner
 
 The smartphones contain an integrated GPS receiver. The devices used are marketed as Assisted GPS ('AGPS'). Performance requirements are defined in GSM/GPRS 3GPP TS 25.171, CDMA 3GPP2 C.S0036-0. There is some [[Hardware:AGPS | discussion]] available as to what significance that "A" might have.
 
-The external antenna for the GPS uses an [http://en.wikipedia.org/wiki/MMCX MMCX] connector.  More information about external antennas on the [[GPS antennas for neo1973|GPS antennas page]]. The connector for the internal GPS antenna also uses an MMCX connector. The external connector is located on the side of Freerunner.
+The external antenna for the GPS uses an [http://en.wikipedia.org/wiki/MMCX MMCX] connector.  More information about external antennas on the [[GPS antennas for neo1973|GPS antennas page]]. The connector for the internal GPS antenna also uses an MMCX connector. The external connector is located on the side of FreeRunner.
 
 The Neo 1973 used the [[Neo1973 hardware#AGPS|Hmamerhead]].
 
