Replacing 'Freerunner' with 'FreeRunner'

--- a/Neo_1973_Partitions.mw
+++ b/Neo_1973_Partitions.mw
@@ -54,7 +54,7 @@ mtd3: 000a0000 00004000 "splash"
 mtd4: 03d1c000 00004000 "rootfs"
 </pre>
 
-On my Freerunner (GTA02v5) the partitions look a bit different:
+On my FreeRunner (GTA02v5) the partitions look a bit different:
 <pre>
 root@GTA02:~# cat /proc/mtd
 dev:    size   erasesize  name
