Replacing 'Freerunner' with 'FreeRunner'

--- a/Neo_1973_and_Windows.mw
+++ b/Neo_1973_and_Windows.mw
@@ -14,7 +14,7 @@ How to connect to Windows XP via Bluetooth is described here: [[Manually_using_B
 === USB Ethernet emulation ===
 {{note|For Windows XP USB RNDIS networking ''finally works'' as of Kernel 2.6.22.5-moko11 using the procedure described below.}}
 
-{{note|For Vista this procedure works with the 2.6.24 kernel that ships with the Neo Freerunner. The initial SSH connection seems a little slow however.}}
+{{note|For Vista this procedure works with the 2.6.24 kernel that ships with the Neo FreeRunner. The initial SSH connection seems a little slow however.}}
 
 # Download http://privat.wmo.de/~c_schweers/NeoRndis.inf ([[NeoRndis.inf|Listing of NeoRndis.inf]]) to somewhere convenient on your Windows machine. If the file is not reachable, you can download another working inf file here: http://users.informatik.uni-halle.de/~rabe/neo/Neo1973.inf ([[Neo1973.inf|Listing of Neo1973.inf]]). If you have Windows Vista x64 try this one: [http://openmoko.kamillo.pl/neo_vista_x64.inf http://openmoko.kamillo.pl/neo_vista_x64.inf]
 # Power up your Neo1973, let it boot into Openmoko, and then connect its USB port to the Windows machine, using a standard USB-A to USB-mini-B cable. Note that if you connect the cable ''before'' powering the phone on, Windows will detect a device presented by the [[Boot lader|boot loader]]. This probably isn't what you want. Let the phone power up first.
