Replacing 'Freerunner' with 'FreeRunner'

--- a/Neo_FreeRunner.mw
+++ b/Neo_FreeRunner.mw
@@ -4,7 +4,7 @@
 The '''Neo FreeRunner''' (internal codename [[GTA02 revisions|GTA02]]) is the second phone designed to run Openmoko software and is the direct descendant of the earlier [[Neo 1973]].
 
 == FreeRunner is released! ==
-[[Image:Freerunner02.gif|200px|right]]
+[[Image:FreeRunner02.gif|200px|right]]
 
 The FreeRunner can be purchased from the [http://www.openmoko.com Online Store] as of July 3, 2008. The software available on the phone makes it suitable for power users and developers only, it is not ready for the general consumer yet. Email announcements and found on the [http://lists.openmoko.org/mailman/listinfo/announce announce mailing list]. For frequently asked questions please check [[FAQ]] and [[GTA02_FAQ|GTA02 FAQ]].
 
@@ -46,7 +46,7 @@ As the hacker's dream toy: it is fully functional. As a GSM phone: some people h
 
 If you want  fully functional smart phone, then download the [[Qtopia]] distribution. If you want to help OM develop it's end user applications, then download [[Om 2008.8|2008.8]]. It's still "Alpha", which means its not feature complete, but it will give you an idea of the direction we are headed. Read more about these and other [[Distributions|distributions]], then choose for yourself.
 
-Please see the [[FreeRunner: Selected Blogs and Articles]] to get more reviews. The [[Freerunner Hardware Issues]] page may also be of interest.
+Please see the [[FreeRunner: Selected Blogs and Articles]] to get more reviews. The [[FreeRunner Hardware Issues]] page may also be of interest.
 
 == See also ==
 *[[Neo FreeRunner (GTA02) FAQ]]
