Replacing 'Freerunner' with 'FreeRunner'

--- a/Neo_FreeRunner%2Fcs.mw
+++ b/Neo_FreeRunner%2Fcs.mw
@@ -46,7 +46,7 @@ FreeeRunner je prodáván jednak na oficiálním obchodě v USA  [http://www.ope
 
 Můžete se podívat na [[FreeRunner: Selected Blogs and Articles]] aby jste se dostali do obrazu.
 
-Také vás může zajímat stránka [[Freerunner Hardware Issues]].
+Také vás může zajímat stránka [[FreeRunner Hardware Issues]].
 
 == Ostartní často kladené otázky ==
 *[[Neo FreeRunner (GTA02) FAQ]]
