--- a/Neo_FreeRunner%2Fes.mw
+++ b/Neo_FreeRunner%2Fes.mw
@@ -3,7 +3,7 @@
 El '''Neo FreeRunner''' (codigo interno: GTA02) es el segundo telefono diseñado para el software Openmoko y es un descendiente directo del [[FIC/es|FIC]] [[Neo1973/es|Neo1973]]. Las especificaciones de Hardware se encuentran en  [[Neo FreeRunner GTA02 Hardware]].
 
 == FreeRunner ya a la venta! ==
-[[Image:Freerunner02.gif|200px|right]]
+[[Image:FreeRunner02.gif|200px|right]]
 
 El FreeRunner puede comprarse en la [http://www.openmoko.com Tienda online] desde el 3 de Julio de 2008. El software disponible en el teléfono es para usuarios avanzados y desarrolladores, todavía no esta preparado para el usuario en general. Tal como se ha indicado en los anuncios oficiales que podéis encontrar en [http://lists.openmoko.org/mailman/listinfo/announce announce mailing list]. Para consultar las preguntas frecuentes revisad [[FAQ]]. Aproximadamente dos veces al mes un miembro de equipo Openmoko realiza una comunicación sobre el estatus de proyecto en [[Community Updates]].
 
@@ -46,7 +46,7 @@ El dispositivo esta siendo vendido a través de diversos canales (incluido [http
 
 Es el jugetito soñado por todo hacker, es totalmente funcional, Como teléfono GSM: algunos han estado usándolo para recibir y realizar llamadas y SMS durante meses, pero con el software de fabrica la batería dura solamente un día. Como dispositivo GPs: Se han solventado unos fallos críticos  con el software que contiene puede posicionarte usando OpenStreetMap. Como reloj/alarma, reproductor multimedia, navegador web, consola de vídeo juegos, lector de emails y gestor de contactos el software todavía no es estable, pero te invitamos a participar en su desarrollo.
 
-Visita los [[FreeRunner: Selected Blogs and Articles]] para tener mas opiniones. La página [[Freerunner Hardware Issues]] también puede resultarte de interés.
+Visita los [[FreeRunner: Selected Blogs and Articles]] para tener mas opiniones. La página [[FreeRunner Hardware Issues]] también puede resultarte de interés.
 
 == Otras preguntas frecuentes ==
 *[[Neo FreeRunner (GTA02) FAQ]]
