Replacing 'Freerunner' with 'FreeRunner'

--- a/Neo_FreeRunner%2Ffa.mw
+++ b/Neo_FreeRunner%2Ffa.mw
@@ -16,7 +16,7 @@ Neo FreeRunner یک تلفن هوشمند لمسی با پایه لینوکس ا
 در این نسخه در حال حاضر این تلفن مناسب کاربران نهایی نمی باشد.
 توجه کنید که بهینه سازی برنامه را بعد از اینکه توسط تیم توسعه دهنده Openmoko و گروهای لینوکس تست شد انجام خواهد شد.
 
-کاربران لینوکس و توسعه دهندگان نرم افزار از آزادی کاملی که برای آنها در استفاده و طراحی نرم افزار در Freerunner داده شده قدردانی خواهند کرد.
+کاربران لینوکس و توسعه دهندگان نرم افزار از آزادی کاملی که برای آنها در استفاده و طراحی نرم افزار در FreeRunner داده شده قدردانی خواهند کرد.
 
 == مشخصات ==
 
@@ -39,7 +39,7 @@ The specs share some features with the previous [[Neo1973]] such as:
 * Tri-band GSM and GPRS for North America (850/1800/1900 Mhz) and the rest of the world (900/1800/1900 Mhz)
 * USB Host function with 500mA power allowing you to power USB devices for short periods (will drain the FreeRunner battery faster)
 
-لیست کامل از مشخصات سخت افزاری و افزودنی های FreeRunner را می توانید در [[Neo FreeRunner GTA02 Hardware | صفحه مشخصات Freerunner]] مشاهده کنید .
+لیست کامل از مشخصات سخت افزاری و افزودنی های FreeRunner را می توانید در [[Neo FreeRunner GTA02 Hardware | صفحه مشخصات FreeRunner]] مشاهده کنید .
 
 مقایسه ای بین Neo 1973 و Neo FreeRunner نیز در [[Neo1973: GTA01Bv4 versus GTA02 comparison| این صفحه]] قرار دارد.
 
